Update Cat.java